bin_PROGRAMS =  xfbd4 xfbdmgr4

xfbd4_SOURCES = xfbd.c
xfbdmgr4_SOURCES = xfbdmgr.c xfbdmgr.h xfbdmgr_cb.c xfbdmgr_cb.h

xfbd4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\"  -I..
xfbd4_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@

xfbdmgr4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DSYSCONFDIR=\"$(sysconfdir)\" -DVERSION=\"@VERSION@\"  -I..
xfbdmgr4_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@

