bin_PROGRAMS =  xfmouse4

xfmouse4_SOURCES = xfmouse.c 

xfmouse4_CFLAGS = @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DDATADIR=\"$(datadir)/xfce4\" -DSYSCONFDIR=\"$(sysconfdir)/xfce4\" -DVERSION=\"@VERSION@\"  -I..
xfmouse4_LDADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@

